--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ nav ul li a:focus {
 /* Home Section */
 #home {
   position: relative;
-  background-image: url("C:/Users/Admin/Downloads/caa4571b-3cf8-40c0-b0be-898666a6eacc.jpg");
+  background-image: url("caa4571b-3cf8-40c0-b0be-898666a6eacc.jpg");
   background-position: center;
   background-size: cover;
   height: 100vh;
@@ -556,7 +556,7 @@ form button:hover {
       <p>Shatakshi Digitech is a leading provider of bulk SMS solutions. We offer secure, scalable, and reliable messaging services that help businesses connect with their customers efficiently. Our mission is to empower businesses with state-of-the-art communication technology that drives growth and customer satisfaction. With years of expertise and a dedicated team, we ensure every message counts.</p>
     </div>
     <div class="right">
-      <img src="C:/Users/Admin/Downloads/334dabe8-baf0-485c-a1d1-657f3abf934a.jpg" alt="About Shatakshi Digitech">
+      <img src="334dabe8-baf0-485c-a1d1-657f3abf934a.jpg" alt="About Shatakshi Digitech">
     </div>
   </section>
 
