--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title>SHATAKSHI DIGITECH</title>
   <style>
+    
    /* Reset and base */
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,6 +17,13 @@ body {
   background-color: #f5f7fa;
   color: #2c3e50;
 }
+@media (max-width: 768px) {
+  .container {
+    width: 90%; /* Adjust width as needed */
+    margin: 0 auto;
+  }
+}
+
 
 /* Navigation */
 nav {
@@ -59,6 +67,51 @@ nav ul li a:focus {
   transform: scale(1.1);
   outline: none;
 }
+/* Hamburger icon (hidden by default) */
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  color: #ecf0f1;
+  cursor: pointer;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  /* Show hamburger */
+  .hamburger {
+    display: block;
+  }
+
+  /* Hide nav menu by default */
+  #nav-menu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #202635;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 99;
+  }
+
+  /* Show nav when active */
+  #nav-menu.active {
+    display: flex;
+  }
+
+  nav ul li {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  nav ul li a {
+    display: block;
+    padding: 10px;
+    width: 100%;
+  }
+}
+
 
 /* Home Section */
 #home {
@@ -529,18 +582,24 @@ form button:hover {
 <body>
 
   <header>
-    <nav>
-      <a href="#home">
-        <img src="loggo.png" alt="Company Logo">
-      </a>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about-us">About Us</a></li>
-        <li><a href="#services">Services</a></li>     
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <nav>
+    <a href="#home">
+      <img src="loggo.png" alt="Company Logo">
+    </a>
+    
+    <!-- Hamburger Icon -->
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+
+    <!-- Navigation Menu -->
+    <ul id="nav-menu">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about-us">About Us</a></li>
+      <li><a href="#services">Services</a></li>     
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
   <div id="home">
   <div class="overlay"></div>
   <div class="home-content">
@@ -700,4 +759,10 @@ form button:hover {
   );
 
   observer.observe(aboutSection);
+</script>
+<script>
+  function toggleMenu() {
+    const menu = document.getElementById('nav-menu');
+    menu.classList.toggle('active');
+  }
 </script>
