--- a/index.html
+++ b/index.html
@@ -725,7 +725,8 @@ form button:hover {
       <div class="contact-info">
         <p><b>Phone:</b> <a href="tel:+91 1234567890"> +91 1234567890</a></p>
         <p><b>Email:</b><a href="mailto:abcstakshi@gmail.com"> abcstakshi@gmail.com</a></p>
-        <p><b>Address:</b> abcdefsythhl</p>
+        <p><b>Address:</b> 1, Shree Ram Anugrah Jang Bahadur Mishra Chawl no1, Ghartanpada, Hanuman Nagar, S P Road, Dahisar East,
+Mumbai - 400068</p>
       </div>
       <form action="https://formsubmit.co/your-email@example.com" method="POST">
           <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
