--- a/index.html
+++ b/index.html
@@ -612,8 +612,7 @@ form button:hover {
   <section id="about-us">
     <div class="left">
       <h1>About Us</h1>
-      <p>Shatakshi Digitech is a leading provider of bulk SMS solutions. We offer secure, scalable, and reliable messaging services that help businesses connect with their customers efficiently. Our mission is to empower businesses with state-of-the-art communication technology that drives growth and customer satisfaction. With years of expertise and a dedicated team, we ensure every message counts.</p>
-    </div>
+      <p>Shatakshi Digitech is a leading provider of enterprise-grade communication solutions, empowering businesses to connect with their customers through secure, scalable, and high-performance messaging technologies. With a comprehensive suite of services including Bulk SMS, WhatsApp Business API, Missed Call Services, Email Campaigns, and Voice Call Solutions, we deliver end-to-end tools designed to streamline communication, enhance engagement, and drive measurable business results. Our mission is to simplify how businesses communicate—whether it's delivering transactional alerts, promotional messages, verification prompts, or service notifications—ensuring that every interaction is timely, relevant, and impactful. Backed by years of industry experience and a passionate team of professionals, we are committed to reliability, innovation, and customer satisfaction at every step. At Shatakshi Digitech, we don’t just send messages — we build meaningful connections that fuel business growth and strengthen brand-customer relationships.</p>    </div>
     <div class="right">
       <img src="334dabe8-baf0-485c-a1d1-657f3abf934a.jpg" alt="About Shatakshi Digitech">
     </div>
