--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #202635; /* Dark blue */
+  background-color: #515d7a; /* Dark blue */
   padding: 30px 40px;
   box-shadow: 0 3px 8px rgba(0,0,0,0.15);
   position: sticky;
