--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ form button:hover {
 #why-choose-us h1 {
   font-size: 3rem;
   margin-bottom: 40px;
-  color: #f0a500; 
+  color: #1e2a47; 
   font-weight: 700;
   letter-spacing: 1.2px;
 }
