--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ form button:hover {
 }
 
 #why-choose-us {
-  background-color: #1e2a38; 
+  background-color: #0d325c; 
   padding: 60px 40px;
   text-align: center;
   color: #e1e8f0; 
@@ -470,7 +470,7 @@ form button:hover {
 #why-choose-us h1 {
   font-size: 3rem;
   margin-bottom: 40px;
-  color: #1e2a47; 
+  color: #f0a500; 
   font-weight: 700;
   letter-spacing: 1.2px;
 }
