--- a/index.html
+++ b/index.html
@@ -785,41 +785,43 @@ Mumbai - 400068</p>
     document.getElementById('feedback-modal').style.display = 'none';
   }
 
-  function submitFeedback() {
-    const name = document.getElementById('feedback-name').value.trim();
-    const message = document.getElementById('feedback-message').value.trim();
+ function submitFeedback() {
+  const name = document.getElementById('feedback-name').value.trim();
+  const message = document.getElementById('feedback-message').value.trim();
 
-    if (!name || !message) {
-      alert('Please fill out both fields.');
-      return;
-    }
-
-    const feedback = { name, message };
-
-    fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec', {
-      method: 'POST',
-      body: JSON.stringify(feedback),
-      headers: {
-        'Content-Type': 'application/json'
-      }
-    })
-    .then(res => res.json())
-    .then(response => {
-      if (response.success) {
-        alert("Thank you for your feedback!");
-        closeFeedbackForm();
-        addFeedbackToDOM(feedback);
-        document.getElementById('feedback-name').value = '';
-        document.getElementById('feedback-message').value = '';
-      } else {
-        alert("Error: " + response.message);
-      }
-    })
-    .catch(err => {
-      console.error("Failed to send feedback", err);
-      alert("There was an error submitting your feedback.");
-    });
+  if (!name || !message) {
+    alert('Please fill out both fields.');
+    return;
   }
+
+  // Create URLSearchParams to send form-urlencoded data
+  const formData = new URLSearchParams();
+  formData.append('name', name);
+  formData.append('message', message);
+
+  fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec', {
+    method: 'POST',
+    body: formData,
+    // DO NOT set Content-Type manually — browser sets it to application/x-www-form-urlencoded automatically
+  })
+  .then(res => res.json())
+  .then(response => {
+    if (response.success) {
+      alert("Thank you for your feedback!");
+      closeFeedbackForm();
+      addFeedbackToDOM({ name, message });
+      document.getElementById('feedback-name').value = '';
+      document.getElementById('feedback-message').value = '';
+    } else {
+      alert("Error: " + response.message);
+    }
+  })
+  .catch(err => {
+    console.error("Failed to send feedback", err);
+    alert("There was an error submitting your feedback.");
+  });
+}
+
 
   function addFeedbackToDOM({ name, message }) {
     const container = document.querySelector(".reviews-container");
