--- a/index.html
+++ b/index.html
@@ -777,6 +777,7 @@ Mumbai - 400068</p>
     menu.classList.toggle('active');
   }
 
+  <script>
   function openFeedbackForm() {
     document.getElementById('feedback-modal').style.display = 'flex';
   }
@@ -784,44 +785,6 @@ Mumbai - 400068</p>
   function closeFeedbackForm() {
     document.getElementById('feedback-modal').style.display = 'none';
   }
-
- function submitFeedback() {
-  const name = document.getElementById('feedback-name').value.trim();
-  const message = document.getElementById('feedback-message').value.trim();
-
-  if (!name || !message) {
-    alert('Please fill out both fields.');
-    return;
-  }
-
-  // Create URLSearchParams to send form-urlencoded data
-  const formData = new URLSearchParams();
-  formData.append('name', name);
-  formData.append('message', message);
-
-  fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec', {
-  method: 'POST',
-  headers: {
-    'Content-Type': 'application/json'
-  },
-  body: JSON.stringify({ name, message }),
-})
-.then(res => res.json())
-.then(response => {
-  if (response.success) {
-    alert("Thank you for your feedback!");
-    closeFeedbackForm();
-    addFeedbackToDOM({ name, message });
-  } else {
-    alert("Error: " + response.message);
-  }
-})
-.catch(err => {
-  console.error("Failed to send feedback", err);
-  alert("There was an error submitting your feedback.");
-});
-
-
 
   function addFeedbackToDOM({ name, message }) {
     const container = document.querySelector(".reviews-container");
@@ -831,9 +794,38 @@ Mumbai - 400068</p>
     container.prepend(box); // Show newest feedback first
   }
 
+  function submitFeedback() {
+    const name = document.getElementById('feedback-name').value.trim();
+    const message = document.getElementById('feedback-message').value.trim();
+
+    if (!name || !message) {
+      alert('Please fill out both fields.');
+      return;
+    }
+
+    fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ name, message }),
+    })
+      .then(res => res.json())
+      .then(response => {
+        if (response.success) {
+          alert("Thank you for your feedback!");
+          closeFeedbackForm();
+          addFeedbackToDOM({ name, message });
+        } else {
+          alert("Error: " + response.message);
+        }
+      })
+      .catch(err => {
+        console.error("Failed to send feedback", err);
+        alert("There was an error submitting your feedback.");
+      });
+  }
+
   window.onload = function () {
     fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec')
-      
       .then(response => response.json())
       .then(feedbacks => {
         feedbacks.reverse().forEach(addFeedbackToDOM);
@@ -842,4 +834,9 @@ Mumbai - 400068</p>
         console.error("Error loading feedbacks:", error);
       });
   };
-</script>
+
+
+
+
+
+</script
