--- a/index.html
+++ b/index.html
@@ -805,13 +805,15 @@ function submitFeedback() {
 
   fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec', {
     method: 'POST',
-    body: formData,  // Not JSON
-    mode: 'cors'     // Optional but recommended
+    body: formData,
+    mode: 'cors' // optional but safe
   })
   .then(response => response.json())
   .then(data => {
     if (data.success) {
       alert("Feedback submitted successfully!");
+      addFeedbackToDOM({ name, message });
+      closeFeedbackForm();
     } else {
       alert("Submission failed: " + data.message);
     }
