--- a/index.html
+++ b/index.html
@@ -792,32 +792,32 @@ Mumbai - 400068</p>
   }
 
   function submitFeedback() {
-    const name = document.getElementById('feedback-name').value;
-    const message = document.getElementById('feedback-message').value;
+  const name = document.getElementById('feedback-name').value;
+  const message = document.getElementById('feedback-message').value;
 
-    const formData = new URLSearchParams();
-    formData.append('name', name);
-    formData.append('message', message);
+  fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json' // ✅ Tell server it's JSON
+    },
+    body: JSON.stringify({ name, message }) // ✅ Send it as JSON string
+  })
+  .then(response => response.json())
+  .then(data => {
+    if (data.success) {
+      alert("Feedback submitted successfully!");
+      addFeedbackToDOM({ name, message });
+      closeFeedbackForm();
+    } else {
+      alert("Submission failed: " + data.message);
+    }
+  })
+  .catch(error => {
+    console.error('Fetch error:', error);
+    alert("Network error. See console for details.");
+  });
+}
 
-    fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec', {
-      method: 'POST',
-      body: formData
-    })
-    .then(response => response.json())
-    .then(data => {
-      if (data.success) {
-        alert("Feedback submitted successfully!");
-        addFeedbackToDOM({ name, message });
-        closeFeedbackForm();
-      } else {
-        alert("Submission failed: " + data.message);
-      }
-    })
-    .catch(error => {
-      console.error('Fetch error:', error);
-      alert("Network error. See console for details.");
-    });
-  }
 
   window.onload = function () {
     fetch('https://script.google.com/macros/s/AKfycbxFot1YS39EDc_sesuGLyYo12T1pHvr-gj5RVRZZzViqT-QVJqdPkfPzbUVsWwF5H-5/exec')
